docs/versioned_docs/version-3.2/api/_partials/resources/virtualclusterinstances/status/virtualCluster_reference.mdx

import PartialMetadatareference from "./virtualCluster/metadata_reference.mdx"
import PartialAppsreference from "./virtualCluster/apps_reference.mdx"
import PartialChartsreference from "./virtualCluster/charts_reference.mdx"
import PartialObjects from "./virtualCluster/objects.mdx"
import PartialAccessreference from "./virtualCluster/access_reference.mdx"
import PartialHelmReleasereference from "./virtualCluster/helmRelease_reference.mdx"
import PartialAccessPointreference from "./virtualCluster/accessPoint_reference.mdx"
import PartialSpaceTemplatereference from "./virtualCluster/spaceTemplate_reference.mdx"
import PartialWorkloadVirtualClusterTemplatereference from "./virtualCluster/workloadVirtualClusterTemplate_reference.mdx"


<details className="config-field" data-expandable="true">
<summary>

#### `metadata` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-metadata}



</summary>

<PartialMetadatareference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `apps` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-apps}

Apps specifies the apps that should get deployed by this template

</summary>

<PartialAppsreference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `charts` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-charts}

Charts are helm charts that should get deployed

</summary>

<PartialChartsreference />


</details>


<PartialObjects />



<details className="config-field" data-expandable="true">
<summary>

#### `access` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-access}

Access defines the access of users and teams to the virtual cluster.

</summary>

<PartialAccessreference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `helmRelease` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-helmRelease}

HelmRelease is the helm release configuration for the virtual cluster.

</summary>

<PartialHelmReleasereference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `accessPoint` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-accessPoint}

AccessPoint defines settings to expose the virtual cluster directly via an ingress rather than
through the (default) Loft proxy

</summary>

<PartialAccessPointreference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `spaceTemplate` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-spaceTemplate}

SpaceTemplate holds the space template

</summary>

<PartialSpaceTemplatereference />


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `workloadVirtualClusterTemplate` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#status-virtualCluster-workloadVirtualClusterTemplate}

WorkloadVirtualClusterTemplateDefinition holds the workload cluster specific deployment options. Needs to be non-nil
in order to deploy the virtual cluster in workload cluster mode.

</summary>

<PartialWorkloadVirtualClusterTemplatereference />


</details>
